Generalized local variables, refactored some logic